@@ -6,59 +6,48 @@ import com.tmoreno.mooc.backoffice.student.domain.Student;
 import com.tmoreno.mooc.shared.mothers.EmailMother;
 import com.tmoreno.mooc.shared.mothers.PersonNameMother;
 
-import java.util.HashMap;
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
 public final class StudentMother {
     public static Student random() {
-        return new Student(
-            StudentIdMother.random(),
-            PersonNameMother.random(),
-            EmailMother.random()
+        return Student.restore(
+            StudentIdMother.random().getValue(),
+            PersonNameMother.random().getValue(),
+            EmailMother.random().getValue(),
+            Collections.emptySet(),
+            Collections.emptyMap()
         );
     }
 
     public static Student randomWithCourse(CourseId courseId) {
-        Set<CourseId> courses = new HashSet<>();
-        courses.add(courseId);
-
-        return new Student(
-            StudentIdMother.random(),
-            PersonNameMother.random(),
-            EmailMother.random(),
-            courses,
-            Map.of()
+        return Student.restore(
+            StudentIdMother.random().getValue(),
+            PersonNameMother.random().getValue(),
+            EmailMother.random().getValue(),
+            Set.of(courseId.getValue()),
+            Collections.emptyMap()
         );
     }
 
     public static Student randomWithReview(CourseId courseId, ReviewId reviewId) {
-        Map<CourseId, ReviewId> reviews = new HashMap<>();
-        reviews.put(courseId, reviewId);
-
-        return new Student(
-            StudentIdMother.random(),
-            PersonNameMother.random(),
-            EmailMother.random(),
-            Set.of(),
-            reviews
+        return Student.restore(
+            StudentIdMother.random().getValue(),
+            PersonNameMother.random().getValue(),
+            EmailMother.random().getValue(),
+            Collections.emptySet(),
+            Map.of(courseId.getValue(), reviewId.getValue())
         );
     }
 
     public static Student randomWithCourseAndReview(CourseId courseId, ReviewId reviewId) {
-        Set<CourseId> courses = new HashSet<>();
-        courses.add(courseId);
-
-        Map<CourseId, ReviewId> reviews = new HashMap<>();
-        reviews.put(courseId, reviewId);
-
-        return new Student(
-                StudentIdMother.random(),
-                PersonNameMother.random(),
-                EmailMother.random(),
-                courses,
-                reviews
+        return Student.restore(
+            StudentIdMother.random().getValue(),
+            PersonNameMother.random().getValue(),
+            EmailMother.random().getValue(),
+            Set.of(courseId.getValue()),
+            Map.of(courseId.getValue(), reviewId.getValue())
         );
     }
 }
